# vmregex-rs

./: Cargo.toml  README.md
benches/: benchmark.rs
examples/: grep.rs
src/: codegen.rs  lib.rs  machine.rs  parser.rs
