[package]
name = "vmregex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.58"

[dev-dependencies]
criterion = "0.5.1"

anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }

[[bench]]
name = "benchmark"
harness = false
